updated Lithuanian translation

--- a/po/wesnoth-ei/lt.po
+++ b/po/wesnoth-ei/lt.po
@@ -631,6 +631,7 @@ msgstr "Radom tave, mėsgali! Pasiruošk mirti!"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:351
+#, fuzzy
 msgid ""
 "They follow us... we must get out of this tunnel. It looks like it is "
 "leading east. That is unfortunate, for it will take us beyond the borders of "
@@ -1584,8 +1585,10 @@ msgstr "Grugas"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:104
+#, fuzzy
+#| msgid "Move Gweddry to the trapdoor"
 msgid "Move Gweddry and Owaec across the river"
-msgstr ""
+msgstr "Nuveskite Gveddrį iki slaptų durų"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:145
