--- a/po/wesnoth-lib/lt.po
+++ b/po/wesnoth-lib/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2019-02-19 01:15+0000\n"
+"PO-Revision-Date: 2019-03-28 21:51+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -4167,7 +4167,7 @@ msgstr "Keisti DI pusės elgseną"
 #. [menu_button]: id=side_team
 #: data/gui/window/mp_staging.cfg:288
 msgid "Which team this side belongs to"
-msgstr ""
+msgstr "Kuriai komandai priklauso ši pusė"
 
 #. [menu_button]: id=side_color
 #: data/gui/window/mp_staging.cfg:304
@@ -5500,7 +5500,7 @@ msgstr ""
 
 #: src/gui/dialogs/addon/manager.cpp:679
 msgid "The following add-on could not be deleted properly:"
-msgstr ""
+msgstr "Šis priedas negalėjo būti tinkamai ištrintas:"
 
 #: src/gui/dialogs/addon/manager.cpp:725
 msgid "Warning"
@@ -5515,6 +5515,8 @@ msgstr ""
 #: src/gui/dialogs/addon/manager.cpp:735
 msgid "Invalid icon path. Make sure the path points to a valid image."
 msgstr ""
+"Neteisingas kelias iki ženkliuko. Įsitikinkite, kad tai yra tinkamo "
+"ženkliuko kelias."
 
 #: src/gui/dialogs/addon/manager.cpp:738 src/gui/dialogs/addon/manager.cpp:741
 #: src/gui/dialogs/addon/manager.cpp:780
@@ -7140,7 +7142,6 @@ msgid "Enter User Command"
 msgstr "Įvesti naudotojo komandą"
 
 #: src/hotkey/hotkey_command.cpp:261
-#, fuzzy
 msgid "Custom Command"
 msgstr "Pasirinkta komanda"
 
