--- a/po/wesnoth-manpages/lt.po
+++ b/po/wesnoth-manpages/lt.po
@@ -1223,7 +1223,7 @@ msgid ""
 "Edited by Nils Kneuper E<lt>crazy-ivanovic@gmx.netE<gt>, ott E<lt>ott@gaon."
 "netE<gt> and Soliton E<lt>soliton.de@gmail.comE<gt>."
 msgstr ""
-"Redaguota Nils Kneuper E<lt>crazy-ivanovic@gmx.netE<gt>, ott E<lt>ott@gaon."
+"Redagavo Nils Kneuper E<lt>crazy-ivanovic@gmx.netE<gt>, ott E<lt>ott@gaon."
 "netE<gt> ir Soliton E<lt>soliton.de@gmail.comE<gt>."
 
 # type: Plain text
