--- a/po/wesnoth-help/lt.po
+++ b/po/wesnoth-help/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2019-02-10 19:24+0000\n"
+"PO-Revision-Date: 2019-03-17 11:00+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -4852,6 +4852,73 @@ msgstr "Slibinai"
 
 #. [race]: id=drake
 #: data/core/units.cfg:61
+#, fuzzy
+#| msgid ""
+#| "Drakes are large, winged and fire-breathing creatures, reminiscent of "
+#| "true dragons. On average, an adult drake stands around three meters tall "
+#| "and easily weighs more than a man and a horse combined. Their skin is "
+#| "made up of hard scales, resistant to most physical strikes except "
+#| "piercing and cold damage. Most drakes are capable of true flight and can "
+#| "travel long distances quickly. However, their sheer weight and bulk "
+#| "limits their flight ability somewhat, making them ungainly in the air. "
+#| "Where possible, they make use of terrain features such as hills, "
+#| "mountains and trees as launch points in order to gain greater height and "
+#| "speed. Fortunately for their enemies, they are still quite clumsy "
+#| "creatures and surprisingly slow in combat. This, combined with their "
+#| "large size, renders them easy targets for those who dare attack them.\n"
+#| "\n"
+#| "Drakes are inherently magical creatures, with a mysterious internal fire "
+#| "fueling their very lives. This can easily be witnessed when one of their "
+#| "kind perishes in combat; its internal fire is released, burning their "
+#| "remains in to ashes. Their internal fire is also their greatest weakness; "
+#| "it makes them extremely vulnerable to cold attacks. Despite their magical "
+#| "nature, drakes are incapable of channeling magic in a controlled manner. "
+#| "While the magic imbued within a drake’s body enables it to spit fire and "
+#| "gives it life, they have no willful control over the functions of this "
+#| "magic.\n"
+#| "\n"
+#| "<header>text='Society'</header>\n"
+#| "Drakes are a relatively warlike race and their societies can be best "
+#| "described as cultured martial societies. The core of a drake tribe is a "
+#| "small group of veteran warriors headed by a mutually respected — or "
+#| "simply feared — dominant who rules the society with an iron fist. Every "
+#| "drake is expected to earn their place in the strict hierarchy, to obey "
+#| "their superiors and command their inferiors. Entry to the ruling elite is "
+#| "only possible through challenging and defeating a superior in single "
+#| "combat, which is the way the hierarchy within the elite itself is "
+#| "established. The use of deception of any kind towards any fellow drake "
+#| "is, without exception, seen as cowardly and unacceptable.\n"
+#| "\n"
+#| "While their warlike nature and sense of territory drives them to defend "
+#| "their territories savagely, drakes rarely invade or trespass on areas "
+#| "already occupied by the other major races. Instead, they settle in "
+#| "unpopulated areas to establish their own territory there. They primarily "
+#| "feed on large game they hunt in the lowlands around their homes, but "
+#| "hatchlings and lower caste drakes are known to feed also on certain kinds "
+#| "of moss and fungi they cultivate deep in their caverns. Drakes value "
+#| "armor- and weapon-smithing, but neither know nor need other science and "
+#| "culture besides this. Nonetheless, the few implements they do fashion are "
+#| "almost unrivaled in quality, only matched by those produced in the finest "
+#| "Dwarvish foundries.\n"
+#| "\n"
+#| "Drakes hatch from eggs and usually live naturally between 20 to 30 years. "
+#| "Death in battle is the most preferred way for a drake to leave this "
+#| "world. Unlike the elder members of other races, drakes naturally grow "
+#| "more aggressive and reckless towards the ends of their natural lives, "
+#| "perhaps to help ensure their place in the heroic legends of their kind.\n"
+#| "\n"
+#| "<header>text='Geography'</header>\n"
+#| "Drakes originated from an archipelago of volcanic islands called "
+#| "<ref>dst='morogor' text='Morogor'</ref> in the <ref>dst='great_ocean' "
+#| "text='Great Ocean'</ref>. A combination of population pressure and the "
+#| "subsidence of many of their home islands has caused colonies of drakes to "
+#| "spread to the <ref>dst='great_continent' text='Great Continent'</ref>. "
+#| "Drakes tend to make their homes in mountain caverns near volcanoes to "
+#| "protect their eggs, hatchings and forges. While drakes naturally prefer "
+#| "warmth, their internal fire is more than capable of sustaining them even "
+#| "in a relatively cold climate, a feature which has allowed them to "
+#| "populate even some of the mountains of the far north of the Great "
+#| "Continent."
 msgid ""
 "Drakes are large, winged and fire-breathing creatures, reminiscent of true "
 "dragons. On average, an adult drake stands around three meters tall and "
@@ -4954,10 +5021,10 @@ msgstr ""
 "Veikiau jie įsikuria neapgyvendintose vietovėse. Jie daugiausia maitinasi "
 "didesniais gyvūnais, kuriuos sumedžioja apie namus esančiose žemumose, bet "
 "jaunikliai ir žemesnio rango slibinai taip pat maitinasi tam tikrom samanom "
-"ir grybais, kuriuos augina giliai savo urvuose. Slibinai vertina tik ginklų "
-"ir šarvų gamybą ir neišmano kitų mokslo ir kultūros sričių. Tačiau tai, ką "
-"jie daro, yra beveik neprilygstami savo kokybe ir tik geriausi dvarfų kalvių "
-"gaminiai jiems prilygsta.\n"
+"ir grybais, kuriuos augina giliai savo urvuose. Slibinai vertina šarvų bei "
+"ginklų gamybą, bet neišmano kitų mokslo ir kultūros sričių. Nepaisant to, "
+"tie keli gaminiai, kuriuos jie pagamina, yra beveik neprilygstami savo "
+"kokybe ir tik geriausių dvarfų liejyklų gaminiai jiems prilygsta.\n"
 "\n"
 "Slibinai išsirita iš kiaušinių ir gyvena nuo 20 iki 30 metų. Žūti mūšyje yra "
 "priimtiniausia mirties forma. Skirtingai negu kitų rūšių vyresnieji, "
@@ -4991,6 +5058,55 @@ msgstr "Dvarfai"
 
 #. [race]: id=dwarf
 #: data/core/units.cfg:97
+#, fuzzy
+#| msgid ""
+#| "The dwarves are a race famed for their miners, blacksmiths, merchants and "
+#| "warriors. Considered as the third oldest race on the great continent "
+#| "after the elves and trolls, their early history is shrouded in mystery. "
+#| "Legends tell of a time long forgotten when their people began emerging "
+#| "from their underground world through caves. Nothing is known about their "
+#| "life prior to their arrival, or their reasons for entering the surface "
+#| "world, but they have been an integral part of the history of the "
+#| "continent since. Soon after their emergence from the underground, the "
+#| "dwarves entered into conflict with the original inhabitants of the land, "
+#| "the elves. The original reason for their dispute has been lost to "
+#| "history, but the two races have since fought three long wars, interrupted "
+#| "by a few decades of peace. During these wars the dwarves could not "
+#| "dislodge the elves from the deep forests in the south, but managed to "
+#| "consolidate their position in hills and the mountains in the north of the "
+#| "continent, known now as the Northlands. Since then they have constructed "
+#| "fantastic fortifications and settlements deep within the mountains and "
+#| "crags of their territory.\n"
+#| "\n"
+#| "Possibly due to their isolation, the dwarves are generally distrustful or "
+#| "hostile towards most other races, particularly the elves. The single "
+#| "exception to this temperament is towards humans. This could be traced "
+#| "back to the era of Haldric I and the arrival of humans and orcs to the "
+#| "continent. At this point the dwarves began allowing some humans, mostly "
+#| "dissidents and outlaws from the Kingdom of Wesnoth, to settle in certain "
+#| "areas of the Northlands. Their motivation was unsurprising. The plight of "
+#| "these individuals reminded the dwarves of their early history of "
+#| "persecution, eliciting a sense of solidarity. The dwarves also had much "
+#| "to gain in forming a bond with these outcasts. They would settle in areas "
+#| "where dwarves disliked living themselves; plains, forests, and swamps, "
+#| "freeing them from defending these areas.\n"
+#| "\n"
+#| "Dwarves are of small stature by human measure, but they are by no means "
+#| "fragile. Their warriors, tough and powerful are both feared and respected "
+#| "throughout the continent for their prowess in battle. In addition, "
+#| "dwarves are known for their calculating intellects and superb "
+#| "craftsmanship. Dwarven smiths are renowned for their deadly weapons and "
+#| "heavy armor. These accouterments are unrivaled in quality, possibly only "
+#| "matched by those produced by drake armorers. Their intelligence and "
+#| "natural inquisitiveness has also made them the most technically advanced "
+#| "race on the continent. One of their most famous, and feared, discoveries "
+#| "was a mysterious powder that produces an immense explosion when exposed "
+#| "to fire or sparks. Certain dwarf warriors use this powder to hurl small "
+#| "objects at tremendous speeds. Given their technological inclinations, "
+#| "many dwarves tend to distrust magic users. However, some practice a form "
+#| "of magic based on the engraving of runes. Called runesmiths, they use "
+#| "these carvings to enchant items in order to augment certain aspects of "
+#| "their natures."
 msgid ""
 "The dwarves are a race famed for their miners, blacksmiths, merchants and "
 "warriors. Considered as the third oldest race on the great continent after "
@@ -5076,8 +5192,9 @@ msgstr ""
 "sprogimą sukeliančių paslaptingų miltelių atradimas. Kai kurie dvarfų kariai "
 "naudoja šiuos miltelius mažų objektų svaidymui žaibišku greičiu. Dėl savo "
 "technologinių polinkių dauguma dvarfų nepasitiki burtininkais, tačiau kai "
-"kurie naudoja magiškų runų raižymus. Runakaliai naudoja tuos raižinius "
-"daiktų užkerėjimui, tam , kad išryškintų tam tikrus jų kilmės aspektus."
+"kurie naudoja magiją pagrįstą runų raižymu. Runakaliai naudoja tuos "
+"raižinius daiktų užkerėjimui, tam, kad išryškintų tam tikrus jų kilmės "
+"aspektus."
 
 #. [race]: id=elf
 #: data/core/units.cfg:114
@@ -5096,6 +5213,44 @@ msgstr "Elfai"
 
 #. [race]: id=elf
 #: data/core/units.cfg:118
+#, fuzzy
+#| msgid ""
+#| "Compared to humans, elves are somewhat taller, more agile but less "
+#| "sturdy. They have slightly pointy ears, pale skin and usually blond hair. "
+#| "Few differences between humans and elves are more pronounced than the "
+#| "Elves’ unusually long life — most, unless claimed by illness, accident or "
+#| "war, live a full two and a half centuries. While some elves possessing a "
+#| "high magical aptitude have been known to live an additional full century, "
+#| "most elves begin to grow physically frail at some point between 250 and "
+#| "300 years of age and pass away rapidly (generally within a year or two) "
+#| "thereafter.\n"
+#| "\n"
+#| "Elves are naturally imbued with magic to a small degree. Though most are "
+#| "unable to channel it directly, its latent presence gives them their keen "
+#| "senses and long life. Many elves have magic-driven talents such as "
+#| "marksmanship or stealth, allowing them to achieve tasks that most normal "
+#| "beings would find astonishing. Those elves that learn to wield this power "
+#| "in more general ways can become truly formidable in its use. Many choose "
+#| "to use their gift to heal others.\n"
+#| "\n"
+#| "A few elves, venturing far down the paths of magic and mysticism, become "
+#| "sensitive to the presence of cold iron and can even be burned by it. "
+#| "Elvish legend hints that this was more common in the far past.\n"
+#| "\n"
+#| "Elves spend much of their time honing their talents and skills. Those not "
+#| "adept at the magical arts typically devote their time honing their "
+#| "physical skills. As a result, elves excel at archery, which is perhaps "
+#| "their most important method of warfare. Most elvish troops carry a bow "
+#| "and no other race can rival their archers in speed and accuracy. All "
+#| "elves also share an intense affection for unspoiled nature. They often "
+#| "feel uncomfortable in open, unvegetated spaces. They live primarily in "
+#| "the forests of the Great Continent; the Aethenwood in the southwest, "
+#| "Wesmere in the northwest, and the great northern woods of which the "
+#| "Lintanir Forest is the southernmost edge.\n"
+#| "\n"
+#| "Elves are the eldest race of the continent, with the possible exception "
+#| "of trolls. Many of their settlements cannot be reliably dated, "
+#| "undoubtedly having existed for over a millennium."
 msgid ""
 "Compared to humans, elves are somewhat taller, more agile but less sturdy. "
 "They have slightly pointy ears, pale skin and usually blond hair. Few "
@@ -5157,7 +5312,7 @@ msgstr ""
 "matyt, jų svarbiausias kariavimo būdas. Dauguma elfų karių nešiojasi lanką "
 "ir jokia kita rasė negali lygintis su jų lankininkais greičiu ir taiklumu. "
 "Visi elfai taip pat turi nepaaiškinamą potraukį prie nepaliestos gamtos. Jie "
-"dažnai jaučiasi nejaukiai didelėse erdvėse be augalų. Elfai pagrinde gyvena "
+"dažnai jaučiasi nejaukiai atvirose erdvėse be augalų. Elfai pagrinde gyvena "
 "Didžiojo žemyno miškuose; Ėtenvude pietvakariuose, Vesmeroje šiaurės "
 "vakaruose ir didžiajame šiauriniame miške, kurio piečiausias kraštas "
 "vadinamas Lintaniro mišku.\n"
@@ -5925,27 +6080,6 @@ msgstr ""
 #: data/lua/feeding.lua:31 data/lua/feeding.lua:44
 msgid "+1 max HP"
 msgstr "+1 maks. GT"
-
-#~ msgid "righteous rage"
-#~ msgstr "teisus įniršis"
-
-#~ msgid ""
-#~ "Whether used offensively or defensively, this attack presses the "
-#~ "engagement until one of the champions is slain, or 30 rounds of attacks "
-#~ "have occurred."
-#~ msgstr ""
-#~ "Ar naudojama puolant, ar ginantis, ši ataka išlaiko priešininką kovoje "
-#~ "iki pat vieno iš čempionų mirties, arba trisdešimt atakos raundų."
-
-#~ msgid "true strike"
-#~ msgstr "teisingas smūgis"
-
-#~ msgid ""
-#~ "This attack always has a 70% chance to hit regardless of the defensive "
-#~ "ability of the champion being attacked."
-#~ msgstr ""
-#~ "Ši ataka visada turi 70% tikimybę pataikyti, nepriklausomai nuo puolamo "
-#~ "čempiono gebėjimų."
 
 #~ msgid "Great River"
 #~ msgstr "Didžioji upė"
