updated Lithuanian translation

--- a/po/wesnoth-httt/lt.po
+++ b/po/wesnoth-httt/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-02-21 19:20+0000\n"
+"PO-Revision-Date: 2019-04-03 22:13+0100\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -2320,10 +2320,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:53
-#, fuzzy
-#| msgid ""
-#| "The queen’s agents were still scouring the coastal regions, for news of "
-#| "Elensefar’s rescue had not yet reached her."
 msgid ""
 "The Queen’s agents were still scouring the coastal regions, for news of "
 "Elensefar’s rescue had not yet reached her."
@@ -2728,12 +2724,6 @@ msgstr "Ačiū, kad grįžai ir padėjai mums, Moremirmu."
 
 #. [message]: speaker=Moremirmu
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:390
-#, fuzzy
-#| msgid ""
-#| "It is both my duty and pleasure, my lord! We were dining with some royal "
-#| "guards of the princess, taking a rest from our pilgrimage, when they "
-#| "spoke of how you were tricked into traveling these dangerous lands. We "
-#| "could do nothing but help you!"
 msgid ""
 "It is both my duty and pleasure, my lord! We were dining with some royal "
 "guards of the Princess, taking a rest from our pilgrimage, when they spoke "
@@ -5311,10 +5301,6 @@ msgstr "Aišku, kad nežino, mažvaike. Žinotų, tai rinktųsi saugesnį kelią
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:339
-#, fuzzy
-#| msgid ""
-#| "Hold your tongue, Kalenz. The princess is our ally and of royal blood. "
-#| "She deserves not your disrespect."
 msgid ""
 "Hold your tongue, Kalenz. The Princess is our ally and of royal blood. She "
 "deserves not your disrespect."
@@ -5754,16 +5740,12 @@ msgstr "Baigėsi Aimukasuro vadovavimas šiai prakeiktai žemei."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:342
-#, fuzzy
-#| msgid ""
-#| "Aimucasur? So you know of this Lich-Lord? Did you know him? He was a "
-#| "powerful mage?"
 msgid ""
 "Aimucasur? So you know of this Lich-Lord? Did you know him? Was he a "
 "powerful mage?"
 msgstr ""
-"Aimukasuro? Tai tu kažką žinai apie šitą ličų valdovą? Tu jį pažinojai? Jis "
-"buvo galingas magas?"
+"Aimukasuro? Tai tu kažką žinai apie šitą ličų valdovą? Tu jį pažinojai? Ar "
+"jis buvo galingas magas?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:347
@@ -6598,12 +6580,6 @@ msgstr "Konradai, negi manai, kad galim taip imti ir pratipenti mūšio lauku?"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:521
-#, fuzzy
-#| msgid ""
-#| "Stop for a moment, princess. Look — you can barely see them in the "
-#| "distance there, but the advance scouts have found each other. The Queen’s "
-#| "troops are marching full speed for the orcs’ camp, and vice-versa. These "
-#| "armies are out for blood."
 msgid ""
 "Stop for a moment, Princess. Look — you can barely see them in the distance "
 "there, but the advance scouts have found each other. The Queen’s troops are "
@@ -6624,11 +6600,6 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:529
-#, fuzzy
-#| msgid ""
-#| "(hushed) Our soldiers will defend us as we rush across the field. Sorry "
-#| "to be blunt, princess, but you and I are the only ones who need to make "
-#| "it across alive."
 msgid ""
 "(hushed) Our soldiers will defend us as we rush across the field. Sorry to "
 "be blunt, Princess, but you and I are the only ones who need to make it "
@@ -8048,10 +8019,6 @@ msgstr "Kas gi jūsų vadas? Kam mes tarnaujame?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:472
-#, fuzzy
-#| msgid ""
-#| "You will serve us. You will protect our flanks while we make way straight "
-#| "for the queen. With you on either flank, we can surely overcome her."
 msgid ""
 "You will serve us. You will protect our flanks while we make way straight "
 "for the Queen. With you on either flank, we can surely overcome her."
@@ -8619,11 +8586,6 @@ msgstr "siaučianti pūga"
 #. [unit_type]: id=Fighter
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:54
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:60
-#, fuzzy
-#| msgid ""
-#| "Young and brash, Fighters attack with a sword, and are vulnerable to more "
-#| "seasoned enemies. However they have the potential to become great "
-#| "warriors one day."
 msgid ""
 "Young and brash, Fighters attack with a sword, and are vulnerable to more "
 "seasoned enemies. However, they have the potential to become great warriors "
@@ -8990,11 +8952,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:12
-#, fuzzy
-#| msgid ""
-#| "The Northern host encamped at Galcadar, by the ford of Abez, and the king "
-#| "led his forces to meet them. Splitting his army in two, he led one half "
-#| "while his son, the crown prince Eldred, led the other."
 msgid ""
 "The Northern host encamped at Galcadar, by the Ford of Abez, and the king "
 "led his forces to meet them. Splitting his army in two, he led one half "
