--- a/po/wesnoth-lib/lt.po
+++ b/po/wesnoth-lib/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 16:09+0300\n"
-"PO-Revision-Date: 2019-02-19 01:15+0000\n"
+"PO-Revision-Date: 2019-03-28 21:51+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -4141,7 +4141,7 @@ msgstr "Keisti DI pusės elgseną"
 #. [menu_button]: id=side_team
 #: data/gui/window/mp_staging.cfg:288
 msgid "Which team this side belongs to"
-msgstr ""
+msgstr "Kuriai komandai priklauso ši pusė"
 
 #. [menu_button]: id=side_color
 #: data/gui/window/mp_staging.cfg:304
@@ -5549,7 +5549,7 @@ msgstr ""
 
 #: src/gui/dialogs/addon/manager.cpp:683
 msgid "The following add-on could not be deleted properly:"
-msgstr ""
+msgstr "Šis priedas negalėjo būti tinkamai ištrintas:"
 
 #: src/gui/dialogs/addon/manager.cpp:729
 msgid "Warning"
@@ -5564,6 +5564,8 @@ msgstr ""
 #: src/gui/dialogs/addon/manager.cpp:739
 msgid "Invalid icon path. Make sure the path points to a valid image."
 msgstr ""
+"Neteisingas kelias iki ženkliuko. Įsitikinkite, kad tai yra tinkamo "
+"ženkliuko kelias."
 
 #: src/gui/dialogs/addon/manager.cpp:742 src/gui/dialogs/addon/manager.cpp:745
 #: src/gui/dialogs/addon/manager.cpp:784
@@ -7228,7 +7230,6 @@ msgid "Enter User Command"
 msgstr "Įvesti naudotojo komandą"
 
 #: src/hotkey/hotkey_command.cpp:280
-#, fuzzy
 msgid "Custom Command"
 msgstr "Pasirinkta komanda"
 
