--- a/po/wesnoth-aoi/lt.po
+++ b/po/wesnoth-aoi/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-02-15 00:50+0000\n"
+"PO-Revision-Date: 2019-03-11 19:39+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -256,13 +256,6 @@ msgstr ""
 
 #. [message]: speaker=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:154
-#, fuzzy
-#| msgid ""
-#| "So the grim tales of them prove true. They must not be allowed to "
-#| "continue; we must banish this blight from our forests. I shall marshal "
-#| "the wardens and drive them off. And the Council needs to hear of this; "
-#| "take the message and return with reinforcements, there might be more of "
-#| "them."
 msgid ""
 "So the grim tales of them prove true. They must not be allowed to continue; "
 "we must banish this blight from our forests. I shall marshal the wardens and "
@@ -272,7 +265,7 @@ msgstr ""
 "Tad niūrūs gandai apie juos, pasirodo, besą tiesa. Negalime leisti jiems "
 "tęsti; turim išvalyti mūsų miškus nuo šito puvėko. Aš vedu sargybinius ir "
 "mes jų atsikratysim. Apie tai turi sužinoti Taryba. Nešk jiems žinią ir "
-"grįžk su pastiprinimu, jų gali būti ir daugiau."
+"grįžk su pastiprinimu, nes jų gali būti ir daugiau."
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:159
