updated Japanese translation

--- a/po/wesnoth-aoi/ja.po
+++ b/po/wesnoth-aoi/ja.po
@@ -1,7 +1,7 @@
 # Translators:
-# tamanegi, 2018
 # RatArmy <broadbarredfirefish@gmail.com>, 2019
 # 堀 秀幸 <Hide.HORI@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:39 UTC\n"
 "PO-Revision-Date: 2018-09-12 07:29+0000\n"
-"Last-Translator: 堀 秀幸 <Hide.HORI@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -255,6 +255,13 @@ msgstr ""
 
 #. [message]: speaker=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:154
+#, fuzzy
+#| msgid ""
+#| "So the grim tales of them prove true. They must not be allowed to "
+#| "continue; we must banish this blight from our forests. I shall marshal "
+#| "the wardens and drive them off. And the Council needs to hear of this; "
+#| "take the message and return with reinforcements, for there might be more "
+#| "of them."
 msgid ""
 "So the grim tales of them prove true. They must not be allowed to continue; "
 "we must banish this blight from our forests. I shall marshal the wardens and "
