--- a/po/wesnoth-low/ja.po
+++ b/po/wesnoth-low/ja.po
@@ -1,6 +1,7 @@
 # Translators:
 # 堀 秀幸 <Hide.HORI@gmail.com>, 2018
 # RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
 "PO-Revision-Date: 2018-09-12 07:30+0000\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -768,6 +769,11 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/02_Hostile_Mountains.cfg:479
+#, fuzzy
+#| msgid ""
+#| "Our troubles will be yours, too, whether either of us wills it or not. "
+#| "The orcs have come down from the north like a flood; if we squabble among "
+#| "ourselves they will feast on our discord."
 msgid ""
 "Our troubles will be yours, too, whether either of us will it or not. The "
 "orcs have come down from the north like a flood; if we squabble among "
