--- a/po/wesnoth-nr/ja.po
+++ b/po/wesnoth-nr/ja.po
@@ -1,6 +1,7 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
 # 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
+# tamanegi, 2019
 #
 msgid ""
 msgstr ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2018-05-18 00:09+0000\n"
-"Last-Translator: 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018\n"
+"Last-Translator: tamanegi, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -130,6 +131,14 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
+#, fuzzy
+#| msgid ""
+#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
+#| "strong fortifications around Dwarven Doors. The people who called it "
+#| "home, dwarven and human alike, knew that the wealth of their city might "
+#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
+#| "themselves well able to fight off any bandit gang or petty warlord that "
+#| "could arise in the thinly-settled Northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -138,6 +147,11 @@ msgid ""
 "able to fight off any bandit gang or petty warlord that could arise in the "
 "thinly-settled northlands."
 msgstr ""
+"Knalga のドワーフ族は交易によって得られる利益を抜け目無く算定し、ドワーフの戸"
+"口の周囲に強大な要塞を建設した。それを我が家と呼ぶ住民は、ドワーフ族も人間も"
+"同様に、その都市の富が遠方の土地から見れば羨望の的となるであろうことを理解し"
+"ていた――それ故に武器は常に研ぎ澄ましており、人里少ない北の大地に現れるような"
+"山賊集団や卑しい将軍は全て自分達で撃退できると見込んでいた。"
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:28
@@ -2302,11 +2316,19 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:744
+#, fuzzy
+#| msgid ""
+#| "If you have no objection, Tallin, we would like to join you. These "
+#| "Northlands are hardly safe these days for anyone to be traveling on their "
+#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "northlands are hardly safe these days for anyone to be traveling on their "
 "own, and we could lend valuable help to your cause."
 msgstr ""
+"もし宜しければ、Tallin さん 、私達はあなた方に加わりたいと思います。この北の"
+"大地はこのところ一人で旅をするものには安全ではありませんし、私達ならあなたの"
+"なさることに有用な手助けができるはずです。"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:749
@@ -5893,20 +5915,29 @@ msgstr "Eryssa"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:351
+#, fuzzy
+#| msgid ""
+#| "(<i>hushed</i>) Thank you, my saviors. Who has come to rescue me from "
+#| "vile captivity?"
 msgid ""
 "I am free! Thank you, my saviors. Who has come to rescue me from vile "
 "captivity?"
 msgstr ""
-"解放されたわ！ ありがとう、助けてくれた方。ひどい監禁から救いに来てくれたのは"
-"どなた？"
+"(<i>声を潜めて</i>) ありがとう、助かったわ。この不愉快な監禁状態から助けてく"
+"れた命の恩人、あならはどちらの方でしょうか？"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:357
+#, fuzzy
+#| msgid ""
+#| "(<i>whispering</i>) Later, princess, first let’s get outta — uh, let us "
+#| "take our leave of this place as swiftly as may be!"
 msgid ""
 "Later, princess, first let’s get outta — uh, let us take our leave of this "
 "place as swiftly as may be!"
 msgstr ""
-"遅れました、王女様。まずは外へ出よう――ゥ、速やかにこの地を辞させて頂きたく！"
+"(<i>ささやき声で</i>) 王女様、それは後ほど。まずはここからさっさと…… っと、ま"
+"ずは可能な限り速やかにここから離れねばなりません！"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:362
@@ -6840,12 +6871,22 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
+#, fuzzy
+#| msgid ""
+#| "Princess, we are not seeking to do business here: <i>“I do this for you "
+#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
+#| "which will forever ensure the peace and prosperity of these Northlands. "
+#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
 "will forever ensure the peace and prosperity of these northlands. Therefore, "
 "let there be no talk of debts and repayments between us."
 msgstr ""
+"王女様、俺達は取引をしようとしているわけじゃない。<i>「お前のために何々をして"
+"やるから、あんたは俺に何々をしろ。」</i>そうではなく、北の大地の永遠の平和と"
+"繁栄を保証する永続的な友好関係を築こうとしているんだ。だから、借りとかお返し"
+"だとかの話は無しにしてくれ。"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:245
@@ -8796,12 +8837,16 @@ msgstr "ハハ！ やっと金を手に入れたぞ！"
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:529
+#, fuzzy
+#| msgid ""
+#| "Hahaha! Mission accomplished! I’ll send a wolf to the Master to deliver "
+#| "the gold. Now let’s crush the rest of this scum!"
 msgid ""
 "Hahaha! Mission accomplished, men! Now let’s crush the rest of this scum and "
 "report back to the Master."
 msgstr ""
-"ハハハ！ 任務達成だ、てめえら！ このカスの残党を叩き潰してご主人に報告する"
-"ぞ。"
+"ハハハハハ！任務完了！資金は狼共に持たせて主の元へ送るとしよう。さあ、残りの"
+"羽虫共も潰してやるぞ！"
 
 #. [message]: id=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:534
@@ -10222,13 +10267,13 @@ msgid ""
 "I am sorry, Elenia, we tried our best. (<i>Sigh</i>) I will never forget "
 "you, Eryssa."
 msgstr ""
-"すまない、Elenia、最善は尽くした。 （<i>ため息をついて</i>） 君のことは忘れな"
-"いよ、Eryssa。"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:873
+#, fuzzy
+#| msgid "You wretched monsters! You are going to pay for this!"
 msgid "You wretches are going to pay for this! FORWARD, MEN!"
-msgstr "クズども、この報いを受けるがいい！ 全軍、前進！"
+msgstr "下劣な怪物どもめ！ この代償を払うことになるぞ！"
 
 #: data/campaigns/Northern_Rebirth/utils/utils.cfg:95
 msgid "Arthian"
@@ -10245,3 +10290,38 @@ msgstr "Arthian"
 
 #~ msgid "Here is a similar door as the one before. I try to open it."
 #~ msgstr "以前のものと似た扉がある。開けてみよう。"
+
+#~ msgid ""
+#~ "Ghouls! They have an insatiable hunger for flesh and even one scratch "
+#~ "from their claws will weaken you with sickness and disease. Nasty things; "
+#~ "let’s chop them to pieces before they can leave the canal."
+#~ msgstr ""
+#~ "グールか！やつらは際限なく飢えており、常に肉を求めておる。そして、一度その"
+#~ "爪を受ければ病を伝染されて衰弱してしまう。面倒な連中と言えよう。やつらが運"
+#~ "河から出る前に細切れにしてしまおうぞ。"
+
+#~ msgid ""
+#~ "You will win this scenario immediately upon moving onto the hex "
+#~ "containing the Princess’s cage"
+#~ msgstr ""
+#~ "王女の檻があるヘクスに自軍ユニットを移動させると勝利が確定し、即時にシナリ"
+#~ "オが終了します。"
+
+#~ msgid ""
+#~ "The intruders are breaking in! Get to the walls and defend the fortress! "
+#~ "And where did that Elvish Princess go?"
+#~ msgstr ""
+#~ "敵が押し入ってくる！壁まで行って要塞を守れ！おい、エルフの姫はどこに行っ"
+#~ "た？"
+
+#~ msgid "Death of Eryssa"
+#~ msgstr "Eryssa の死"
+
+#~ msgid "Turns run out"
+#~ msgstr "ターン数が尽きる"
+
+#~ msgid "You will not receive any gold if Sisal dies."
+#~ msgstr "Sisal が死んでしまうと資金は一切得られません。"
+
+#~ msgid "How could this happen? We can’t possibly go on without her..."
+#~ msgstr "どうしてこんなことに？君無しでは無理だよ……"
