--- a/po/wesnoth-sotbe/ja.po
+++ b/po/wesnoth-sotbe/ja.po
@@ -1,6 +1,6 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
 # tamanegi, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
 #
 msgid ""
 msgstr ""
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2018-05-18 00:11+0000\n"
-"Last-Translator: tamanegi, 2018\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -583,25 +583,31 @@ msgstr "わかった。"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:212
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 12)"
 msgid "Resist until your people are ready to go (Turn 12)"
-msgstr ""
+msgstr "出発の準備が整うまで抵抗する（ターン 12 まで）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:215
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 13)"
 msgid "Resist until your people are ready to go (Turn 13)"
-msgstr ""
+msgstr "出発の準備が整うまで抵抗する（ターン 13 まで）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:218
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 14)"
 msgid "Resist until your people are ready to go (Turn 14)"
-msgstr ""
+msgstr "出発の準備が整うまで抵抗する（ターン 14 まで）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:223
 #, fuzzy
-#| msgid "Then move Kapou’e to the signpost in the southwest"
+#| msgid "Then move Kapou’e to the signpost in the northeast"
 msgid "Then move Kapou’e to the signpost in the Northeast"
-msgstr "そして Kapou’e を南西の道しるべに移動させる"
+msgstr "そして Kapou’e を北東の道しるべまで移動させる"
 
 #. [message]: role=Helper
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:263
@@ -620,9 +626,9 @@ msgstr "随分かかったな。では行くぞ！"
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:279
 #, fuzzy
-#| msgid "Move Kapou’e to the signpost in the southwest"
+#| msgid "Move Kapou’e to the signpost in the northeast"
 msgid "Move Kapou’e to the signpost in the Northeast"
-msgstr "Kapou’e を南西の道しるべへ移動させる"
+msgstr "Kapou’e を北東の道しるべまで移動させる"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:329
@@ -3974,10 +3980,9 @@ msgstr "良い朝だな、Shan Taum！"
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:218
 #, fuzzy
-#| msgid ""
-#| "Who is that? Kapou’e! What are you doing in my lands, you weakling runt?"
+#| msgid "What... Kapou’e! What in the frozen Northlands are you doing here?!"
 msgid "What... Kapou’e! What in the frozen northlands are you doing here?!"
-msgstr "誰だ？誰かと思えば Kapou’e か！弱虫のチビが我が地で何をしているのだ？"
+msgstr "何だと…… Kapou’e！凍てついた北の大地で一体何をしているのだ、貴様？！"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:223
